bug:: define_parameter should be loaded into utlisml

--- a/nbb_train.ipynb
+++ b/nbb_train.ipynb
@@ -2,34 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['N09E106', 'N10E104', 'N10E105', 'N10E106', 'N13E103']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['N09E106', 'N10E104', 'N10E105', 'N10E106', 'N13E103']\n",
+      "(123,\n",
+      " 'all',\n",
+      " 'gpu',\n",
+      " 'ldtm',\n",
+      " 'zdif',\n",
+      " 'tdem_dem_filled',\n",
+      " ['egm08', 'egm96', 'tdem_hem', 'tdem_dem_filled'],\n",
+      " {'depth': 16,\n",
+      "  'devices': '0:1',\n",
+      "  'eval_metric': 'RMSE',\n",
+      "  'iterations': 2000,\n",
+      "  'learning_rate': 0.1,\n",
+      "  'loss_function': 'RMSE',\n",
+      "  'od_type': 'Iter',\n",
+      "  'od_wait': 100,\n",
+      "  'random_seed': 123,\n",
+      "  'task_type': 'GPU'},\n",
+      " 2100,\n",
+      " ['ldtm', 'zdif'],\n",
+      " ['egm08', 'egm96', 'tdem_hem', 'tdem_dem_filled', 'ldtm'])\n"
+     ]
     }
    ],
    "source": [
-    "from uvars import roi_tiles, model_dir, pq_path, define_parameters\n",
+    "from uvars import roi_tiles, model_dir, pq_path\n",
+    "from params import define_parameters\n",
     "from glob import glob \n",
     "from os import makedirs\n",
     "from utilsml import train_catboost\n",
+    "from pprint import pprint as P\n",
     "\n",
     "def hpo_catboost_on_optuna():\n",
     "    pass #geoww\n",
-    "roi_tiles # missing one tile in mkd go back to process it "
+    "roi_tiles # missing one tile in mkd go back to process it \n",
+    "# define_parameters check always that this comes from params in utilsml*****\n",
+    "P(roi_tiles)\n",
+    "P(define_parameters())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,34 +64,21 @@
       "Loading parameters...\n",
       "Loading datasets...\n",
       "Splitting datasets...\n",
+      "(201623087, 6) (60486927, 6)\n",
       "TRAINING...\n",
       "TRAINING ldtm\n",
-      "Learning rate set to 0.5\n",
-      "0:\tlearn: 13.9297966\ttest: 14.1387163\tbest: 14.1387163 (0)\ttotal: 258ms\tremaining: 2.32s\n",
-      "9:\tlearn: 10.9470086\ttest: 11.0513470\tbest: 11.0513470 (9)\ttotal: 2.35s\tremaining: 0us\n",
-      "bestTest = 11.05134698\n",
-      "bestIteration = 9\n",
-      "TRAINING zdif\n",
-      "Learning rate set to 0.5\n",
-      "0:\tlearn: 18.8824138\ttest: 19.1643094\tbest: 19.1643094 (0)\ttotal: 274ms\tremaining: 2.46s\n",
-      "9:\tlearn: 13.0381977\ttest: 13.2024692\tbest: 13.2024692 (9)\ttotal: 2.43s\tremaining: 0us\n",
-      "bestTest = 13.20246916\n",
-      "bestIteration = 9\n",
-      "==============================\n",
-      "Run time = 1.06 min(s)\n"
+      "0:\tlearn: 15.4841009\ttest: 15.4602805\tbest: 15.4602805 (0)\ttotal: 1.28s\tremaining: 42m 44s\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "if __name__ == '__main__':\n",
     "    makedirs(model_dir, exist_ok=True)\n",
     "    pq_files = glob(pq_path); print(len(pq_files))\n",
     "    #pq_files = #[i for i in pq_files if 'S0' not in i]\n",
     "    pq_files = [i for i in pq_files for j in roi_tiles if j in i]; print(len(pq_files))\n",
-    "    print(pq_files)\n",
-    "    train_catboost(pq_files, model_dir, sample_frac=0.1)\n"
+    "    print(pq_files)# pass the parameters here so they can be saved \n",
+    "    train_catboost(pq_files, model_dir)#, sample_frac)\n"
    ]
   },
   {
